// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Summary service endpoint returns an array of multiple component dependencies renders the page 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <h1
          class="text-info my-3"
        >
          Test Component Name 1 - Dependencies
        </h1>
         
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1"
            target="_self"
          >
            Info
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/dependencies"
            target="_self"
          >
            
    Dependencies
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/response-times"
            target="_self"
          >
            
    Response Times
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/downstream-response-times"
            target="_self"
          >
            
    Downstream Response Times
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/call-graphs"
            target="_self"
          >
            
    Call Graphs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/cross-functional-requirements"
            target="_self"
          >
            
    Cross Functional Requirements
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/tech-debts"
            target="_self"
          >
            
    Tech Debts
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/tests"
            target="_self"
          >
            Tests
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/errors"
            target="_self"
          >
            Errors
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/openapi-specs"
            target="_self"
          >
            
    OpenAPI Specs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/repo"
            target="_self"
          >
            Repo
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/readme"
            target="_self"
          >
            README
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/to-dos"
            target="_self"
          >
            To Dos
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/lines-of-code"
            target="_self"
          >
            
    Lines of Code
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/software-repositories"
            target="_self"
          >
            
    Software Repositories
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/software"
            target="_self"
          >
            Software
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/imports"
            target="_self"
          >
            Imports
          </a>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="graph col"
        >
          <svg
            height="1200"
            id="component-dependency-graph"
            overflow="auto"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              class="component-dependency-graph-background"
              fill-opacity="0"
            />
             
            <defs>
              <marker
                class="dependency-marker all-dependency-marker"
                id="component-dependency-graph-dependency-marker-all"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker manual-dependency-marker"
                id="component-dependency-graph-dependency-marker-manual"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker scope-related-dependency-marker"
                id="component-dependency-graph-dependency-marker-scope-related"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker scoped-dependency-marker"
                id="component-dependency-graph-dependency-marker-scoped"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker related-dependency-marker"
                id="component-dependency-graph-dependency-marker-related"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker direct-dependency-marker"
                id="component-dependency-graph-dependency-marker-direct"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker selected-dependency-marker"
                id="component-dependency-graph-dependency-marker-selected"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
            </defs>
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g>
              <path
                class="dependency direct-dependency"
                d="M50,50L50,150"
                id="component-dependency-graph-dependency-0"
                marker-end="url(#component-dependencies-direct-dependency-marker)"
              />
            </g>
            <g />
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g>
              <circle
                class="node direct-node"
                cx="50"
                cy="150"
                id="component-dependency-graph-node-1"
                r="5"
                title="test-component-id-2"
              />
            </g>
            <g>
              <circle
                class="node selected-node"
                cx="50"
                cy="50"
                id="component-dependency-graph-node-0"
                r="5"
                title="test-component-id-1"
              />
            </g>
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g>
              <text
                class="node-label direct-node-label"
                font-size="14"
                stroke-width="1.75"
                x="62"
                y="170"
              >
                <tspan
                  x="62"
                  y="170"
                >
                  
        test-component-id-2
      
                </tspan>
              </text>
            </g>
            <g>
              <text
                class="node-label selected-node-label"
                font-size="14"
                stroke-width="1.75"
                x="62"
                y="70"
              >
                <tspan
                  x="62"
                  y="70"
                >
                  
        test-component-id-1
      
                </tspan>
              </text>
            </g>
          </svg>
        </div>
         
        <div
          class="col-md-3"
        >
          <transition-stub
            css="true"
            enteractiveclass=""
            enterclass=""
            entertoclass="show"
            leaveactiveclass=""
            leaveclass="show"
            leavetoclass=""
            name=""
          >
            <div
              aria-atomic="true"
              aria-live="polite"
              class="alert alert-dismissible alert-info"
              role="alert"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                ×
              </button>
              
          Hover over or click a component's dot in the dependencies diagram to see
          more information about it
        
            </div>
          </transition-stub>
           
          <div
            class="my-3"
          >
            <div
              class="mt-3"
            >
              <!---->
               
              <fieldset
                class="form-group"
                id="__BVID__125"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__125__BV_label_"
                  tabindex="-1"
                >
                  Teams
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__126"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__126_BV_option_0"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__126_BV_option_0"
                      >
                        <span>
                          test-team-id-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__126_BV_option_1"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__126_BV_option_1"
                      >
                        <span>
                          test-team-id-1-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__129"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__129__BV_label_"
                  tabindex="-1"
                >
                  Tags
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__130"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__130_BV_option_0"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__130_BV_option_0"
                      >
                        <span>
                          test-tag-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__130_BV_option_1"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__130_BV_option_1"
                      >
                        <span>
                          test-tag-1-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__133"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__133__BV_label_"
                  tabindex="-1"
                >
                  Component Types
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__134"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__134_BV_option_0"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__134_BV_option_0"
                      >
                        <span>
                          test-component-type-id-1
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__136"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__136__BV_label_"
                  tabindex="-1"
                >
                  Platforms
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__137"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__137_BV_option_0"
                        name="platformId"
                        type="checkbox"
                        value="undefined"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__137_BV_option_0"
                      >
                        <span>
                          undefined
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <div
                class="form-group"
                id="__BVID__139"
                role="group"
              >
                <label
                  class="d-block"
                  for="component-filter"
                  id="__BVID__139__BV_label_"
                >
                  Component
                </label>
                <div>
                  <select
                    class="custom-select custom-select-sm"
                    id="component-filter"
                  >
                    <option
                      value=""
                    >
                      Please select a component
                    </option>
                    <option
                      value="test-component-id-1"
                    >
                      test-component-id-1
                    </option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="form-row form-group my-3 mr-2"
              id="__BVID__141"
              role="group"
            >
              <label
                class="col-6 col-form-label col-form-label-sm"
                for="graph-scope-related-radius"
                id="__BVID__141__BV_label_"
              >
                Radius:
              </label>
              <div
                class="col"
              >
                <select
                  class="custom-select custom-select-sm"
                  id="graph-scope-related-radius"
                >
                  <option
                    value="0"
                  >
                    0
                  </option>
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                  <option
                    value="4"
                  >
                    4
                  </option>
                  <option
                    value="5"
                  >
                    5
                  </option>
                  <option
                    value="6"
                  >
                    6
                  </option>
                  <option
                    value="7"
                  >
                    7
                  </option>
                  <option
                    value="8"
                  >
                    8
                  </option>
                  <option
                    value="9"
                  >
                    9
                  </option>
                  <option
                    value="10"
                  >
                    10
                  </option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
             
            <div
              class="form-row form-group my-3 mr-2"
              id="__BVID__143"
              role="group"
            >
              <label
                class="col-6 col-form-label col-form-label-sm"
                for="graph-zoom"
                id="__BVID__143__BV_label_"
              >
                Zoom:
              </label>
              <div
                class="col"
              >
                <select
                  class="custom-select custom-select-sm"
                  id="graph-zoom"
                >
                  <option
                    value="25"
                  >
                    25%
                  </option>
                  <option
                    value="50"
                  >
                    50%
                  </option>
                  <option
                    value="75"
                  >
                    75%
                  </option>
                  <option
                    value="100"
                  >
                    100%
                  </option>
                  <option
                    value="125"
                  >
                    125%
                  </option>
                  <option
                    value="150"
                  >
                    150%
                  </option>
                  <option
                    value="200"
                  >
                    200%
                  </option>
                  <option
                    value="400"
                  >
                    400%
                  </option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
             
            <div
              class="custom-control custom-checkbox"
            >
              <input
                class="custom-control-input"
                id="detailed-dependencies"
                type="checkbox"
                value="true"
              />
              <label
                class="custom-control-label"
                for="detailed-dependencies"
              >
                
            Detailed dependencies
          
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Summary service endpoint returns an array of multiple component dependencies when the detailed checkbox is checked shows detailed dependencies in graph 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <h1
          class="text-info my-3"
        >
          Test Component Name 1 - Dependencies
        </h1>
         
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1"
            target="_self"
          >
            Info
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/dependencies"
            target="_self"
          >
            
    Dependencies
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/response-times"
            target="_self"
          >
            
    Response Times
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/downstream-response-times"
            target="_self"
          >
            
    Downstream Response Times
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/call-graphs"
            target="_self"
          >
            
    Call Graphs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/cross-functional-requirements"
            target="_self"
          >
            
    Cross Functional Requirements
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/tech-debts"
            target="_self"
          >
            
    Tech Debts
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/tests"
            target="_self"
          >
            Tests
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/errors"
            target="_self"
          >
            Errors
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/openapi-specs"
            target="_self"
          >
            
    OpenAPI Specs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/repo"
            target="_self"
          >
            Repo
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/readme"
            target="_self"
          >
            README
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/to-dos"
            target="_self"
          >
            To Dos
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/lines-of-code"
            target="_self"
          >
            
    Lines of Code
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/software-repositories"
            target="_self"
          >
            
    Software Repositories
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/software"
            target="_self"
          >
            Software
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/imports"
            target="_self"
          >
            Imports
          </a>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="graph col"
        >
          <svg
            height="1200"
            id="component-dependency-graph"
            overflow="auto"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              class="component-dependency-graph-background"
              fill-opacity="0"
            />
             
            <defs>
              <marker
                class="dependency-marker all-dependency-marker"
                id="component-dependency-graph-dependency-marker-all"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker manual-dependency-marker"
                id="component-dependency-graph-dependency-marker-manual"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker scope-related-dependency-marker"
                id="component-dependency-graph-dependency-marker-scope-related"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker scoped-dependency-marker"
                id="component-dependency-graph-dependency-marker-scoped"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker related-dependency-marker"
                id="component-dependency-graph-dependency-marker-related"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker direct-dependency-marker"
                id="component-dependency-graph-dependency-marker-direct"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker selected-dependency-marker"
                id="component-dependency-graph-dependency-marker-selected"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
            </defs>
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g>
              <path
                class="dependency direct-dependency"
                d="M50,50L50,150"
                id="component-dependency-graph-dependency-0"
                marker-end="url(#component-dependencies-direct-dependency-marker)"
              />
            </g>
            <g />
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g>
              <circle
                class="node direct-node"
                cx="50"
                cy="150"
                id="component-dependency-graph-node-1"
                r="5"
                title="test-component-id-2"
              />
            </g>
            <g>
              <circle
                class="node selected-node"
                cx="50"
                cy="50"
                id="component-dependency-graph-node-0"
                r="5"
                title="test-component-id-1"
              />
            </g>
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g>
              <text
                class="node-label direct-node-label"
                font-size="14"
                stroke-width="1.75"
                x="62"
                y="170"
              >
                <tspan
                  x="62"
                  y="170"
                >
                  
        test-component-id-2
      
                </tspan>
              </text>
            </g>
            <g>
              <text
                class="node-label selected-node-label"
                font-size="14"
                stroke-width="1.75"
                x="62"
                y="70"
              >
                <tspan
                  x="62"
                  y="70"
                >
                  
        test-component-id-1
      
                </tspan>
              </text>
            </g>
          </svg>
        </div>
         
        <div
          class="col-md-3"
        >
          <transition-stub
            css="true"
            enteractiveclass=""
            enterclass=""
            entertoclass="show"
            leaveactiveclass=""
            leaveclass="show"
            leavetoclass=""
            name=""
          >
            <div
              aria-atomic="true"
              aria-live="polite"
              class="alert alert-dismissible alert-info"
              role="alert"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                ×
              </button>
              
          Hover over or click a component's dot in the dependencies diagram to see
          more information about it
        
            </div>
          </transition-stub>
           
          <div
            class="my-3"
          >
            <div
              class="mt-3"
            >
              <!---->
               
              <fieldset
                class="form-group"
                id="__BVID__173"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__173__BV_label_"
                  tabindex="-1"
                >
                  Teams
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__174"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__174_BV_option_0"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__174_BV_option_0"
                      >
                        <span>
                          test-team-id-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__174_BV_option_1"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__174_BV_option_1"
                      >
                        <span>
                          test-team-id-1-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__177"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__177__BV_label_"
                  tabindex="-1"
                >
                  Tags
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__178"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__178_BV_option_0"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__178_BV_option_0"
                      >
                        <span>
                          test-tag-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__178_BV_option_1"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__178_BV_option_1"
                      >
                        <span>
                          test-tag-1-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__181"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__181__BV_label_"
                  tabindex="-1"
                >
                  Component Types
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__182"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__182_BV_option_0"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__182_BV_option_0"
                      >
                        <span>
                          test-component-type-id-1
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__184"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__184__BV_label_"
                  tabindex="-1"
                >
                  Platforms
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__185"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__185_BV_option_0"
                        name="platformId"
                        type="checkbox"
                        value="undefined"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__185_BV_option_0"
                      >
                        <span>
                          undefined
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <div
                class="form-group"
                id="__BVID__187"
                role="group"
              >
                <label
                  class="d-block"
                  for="component-filter"
                  id="__BVID__187__BV_label_"
                >
                  Component
                </label>
                <div>
                  <select
                    class="custom-select custom-select-sm"
                    id="component-filter"
                  >
                    <option
                      value=""
                    >
                      Please select a component
                    </option>
                    <option
                      value="test-component-id-1"
                    >
                      test-component-id-1
                    </option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="form-row form-group my-3 mr-2"
              id="__BVID__189"
              role="group"
            >
              <label
                class="col-6 col-form-label col-form-label-sm"
                for="graph-scope-related-radius"
                id="__BVID__189__BV_label_"
              >
                Radius:
              </label>
              <div
                class="col"
              >
                <select
                  class="custom-select custom-select-sm"
                  id="graph-scope-related-radius"
                >
                  <option
                    value="0"
                  >
                    0
                  </option>
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                  <option
                    value="4"
                  >
                    4
                  </option>
                  <option
                    value="5"
                  >
                    5
                  </option>
                  <option
                    value="6"
                  >
                    6
                  </option>
                  <option
                    value="7"
                  >
                    7
                  </option>
                  <option
                    value="8"
                  >
                    8
                  </option>
                  <option
                    value="9"
                  >
                    9
                  </option>
                  <option
                    value="10"
                  >
                    10
                  </option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
             
            <div
              class="form-row form-group my-3 mr-2"
              id="__BVID__191"
              role="group"
            >
              <label
                class="col-6 col-form-label col-form-label-sm"
                for="graph-zoom"
                id="__BVID__191__BV_label_"
              >
                Zoom:
              </label>
              <div
                class="col"
              >
                <select
                  class="custom-select custom-select-sm"
                  id="graph-zoom"
                >
                  <option
                    value="25"
                  >
                    25%
                  </option>
                  <option
                    value="50"
                  >
                    50%
                  </option>
                  <option
                    value="75"
                  >
                    75%
                  </option>
                  <option
                    value="100"
                  >
                    100%
                  </option>
                  <option
                    value="125"
                  >
                    125%
                  </option>
                  <option
                    value="150"
                  >
                    150%
                  </option>
                  <option
                    value="200"
                  >
                    200%
                  </option>
                  <option
                    value="400"
                  >
                    400%
                  </option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
             
            <div
              class="custom-control custom-checkbox"
            >
              <input
                class="custom-control-input"
                id="detailed-dependencies"
                type="checkbox"
                value="true"
              />
              <label
                class="custom-control-label"
                for="detailed-dependencies"
              >
                
            Detailed dependencies
          
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Summary service endpoint returns no dependencies renders the page 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <h1
          class="text-info my-3"
        >
          Test Component Name 1 - Dependencies
        </h1>
         
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1"
            target="_self"
          >
            Info
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/dependencies"
            target="_self"
          >
            
    Dependencies
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/response-times"
            target="_self"
          >
            
    Response Times
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/downstream-response-times"
            target="_self"
          >
            
    Downstream Response Times
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/call-graphs"
            target="_self"
          >
            
    Call Graphs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/cross-functional-requirements"
            target="_self"
          >
            
    Cross Functional Requirements
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/tech-debts"
            target="_self"
          >
            
    Tech Debts
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/tests"
            target="_self"
          >
            Tests
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/errors"
            target="_self"
          >
            Errors
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/openapi-specs"
            target="_self"
          >
            
    OpenAPI Specs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/repo"
            target="_self"
          >
            Repo
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/readme"
            target="_self"
          >
            README
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/to-dos"
            target="_self"
          >
            To Dos
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/lines-of-code"
            target="_self"
          >
            
    Lines of Code
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/software-repositories"
            target="_self"
          >
            
    Software Repositories
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/software"
            target="_self"
          >
            Software
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/components/test-component-id-1/imports"
            target="_self"
          >
            Imports
          </a>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="graph col"
        >
          <svg
            height="1200"
            id="component-dependency-graph"
            overflow="auto"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              class="component-dependency-graph-background"
              fill-opacity="0"
            />
             
            <defs>
              <marker
                class="dependency-marker all-dependency-marker"
                id="component-dependency-graph-dependency-marker-all"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker manual-dependency-marker"
                id="component-dependency-graph-dependency-marker-manual"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker scope-related-dependency-marker"
                id="component-dependency-graph-dependency-marker-scope-related"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker scoped-dependency-marker"
                id="component-dependency-graph-dependency-marker-scoped"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker related-dependency-marker"
                id="component-dependency-graph-dependency-marker-related"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker direct-dependency-marker"
                id="component-dependency-graph-dependency-marker-direct"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
              <marker
                class="dependency-marker selected-dependency-marker"
                id="component-dependency-graph-dependency-marker-selected"
                markerHeight="11.5"
                markerUnits="userSpaceOnUse"
                markerWidth="7.1"
                orient="auto-start-reverse"
                refX="10"
                refY="5.75"
                viewBox="0 0 7.1 11.5"
              >
                <path
                  d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
                />
              </marker>
            </defs>
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g />
            <g />
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g />
            <g />
             
            <g />
            <g />
            <g />
            <g />
            <g />
            <g />
            <g />
          </svg>
        </div>
         
        <div
          class="col-md-3"
        >
          <transition-stub
            css="true"
            enteractiveclass=""
            enterclass=""
            entertoclass="show"
            leaveactiveclass=""
            leaveclass="show"
            leavetoclass=""
            name=""
          >
            <div
              aria-atomic="true"
              aria-live="polite"
              class="alert alert-dismissible alert-info"
              role="alert"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                ×
              </button>
              
          Hover over or click a component's dot in the dependencies diagram to see
          more information about it
        
            </div>
          </transition-stub>
           
          <div
            class="my-3"
          >
            <div
              class="mt-3"
            >
              <!---->
               
              <fieldset
                class="form-group"
                id="__BVID__77"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__77__BV_label_"
                  tabindex="-1"
                >
                  Teams
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__78"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__78_BV_option_0"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__78_BV_option_0"
                      >
                        <span>
                          test-team-id-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__78_BV_option_1"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__78_BV_option_1"
                      >
                        <span>
                          test-team-id-1-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__81"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__81__BV_label_"
                  tabindex="-1"
                >
                  Tags
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__82"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__82_BV_option_0"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__82_BV_option_0"
                      >
                        <span>
                          test-tag-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__82_BV_option_1"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__82_BV_option_1"
                      >
                        <span>
                          test-tag-1-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__85"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__85__BV_label_"
                  tabindex="-1"
                >
                  Component Types
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__86"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__86_BV_option_0"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__86_BV_option_0"
                      >
                        <span>
                          test-component-type-id-1
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <fieldset
                class="form-group"
                id="__BVID__88"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__88__BV_label_"
                  tabindex="-1"
                >
                  Platforms
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__89"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__89_BV_option_0"
                        name="platformId"
                        type="checkbox"
                        value="undefined"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__89_BV_option_0"
                      >
                        <span>
                          undefined
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
               
              <div
                class="form-group"
                id="__BVID__91"
                role="group"
              >
                <label
                  class="d-block"
                  for="component-filter"
                  id="__BVID__91__BV_label_"
                >
                  Component
                </label>
                <div>
                  <select
                    class="custom-select custom-select-sm"
                    id="component-filter"
                  >
                    <option
                      value=""
                    >
                      Please select a component
                    </option>
                    <option
                      value="test-component-id-1"
                    >
                      test-component-id-1
                    </option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="form-row form-group my-3 mr-2"
              id="__BVID__93"
              role="group"
            >
              <label
                class="col-6 col-form-label col-form-label-sm"
                for="graph-scope-related-radius"
                id="__BVID__93__BV_label_"
              >
                Radius:
              </label>
              <div
                class="col"
              >
                <select
                  class="custom-select custom-select-sm"
                  id="graph-scope-related-radius"
                >
                  <option
                    value="0"
                  >
                    0
                  </option>
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                  <option
                    value="4"
                  >
                    4
                  </option>
                  <option
                    value="5"
                  >
                    5
                  </option>
                  <option
                    value="6"
                  >
                    6
                  </option>
                  <option
                    value="7"
                  >
                    7
                  </option>
                  <option
                    value="8"
                  >
                    8
                  </option>
                  <option
                    value="9"
                  >
                    9
                  </option>
                  <option
                    value="10"
                  >
                    10
                  </option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
             
            <div
              class="form-row form-group my-3 mr-2"
              id="__BVID__95"
              role="group"
            >
              <label
                class="col-6 col-form-label col-form-label-sm"
                for="graph-zoom"
                id="__BVID__95__BV_label_"
              >
                Zoom:
              </label>
              <div
                class="col"
              >
                <select
                  class="custom-select custom-select-sm"
                  id="graph-zoom"
                >
                  <option
                    value="25"
                  >
                    25%
                  </option>
                  <option
                    value="50"
                  >
                    50%
                  </option>
                  <option
                    value="75"
                  >
                    75%
                  </option>
                  <option
                    value="100"
                  >
                    100%
                  </option>
                  <option
                    value="125"
                  >
                    125%
                  </option>
                  <option
                    value="150"
                  >
                    150%
                  </option>
                  <option
                    value="200"
                  >
                    200%
                  </option>
                  <option
                    value="400"
                  >
                    400%
                  </option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
             
            <div
              class="custom-control custom-checkbox"
            >
              <input
                class="custom-control-input"
                id="detailed-dependencies"
                type="checkbox"
                value="true"
              />
              <label
                class="custom-control-label"
                for="detailed-dependencies"
              >
                
            Detailed dependencies
          
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
